--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -3,6 +3,6 @@
       <span>{{task.title}}</span>
   </li>
   <li>
-    <input type="text">
+    <input type="text" [(ngModel)]="newTaskTitle">
   </li>
 </ul>
